# jaxisp

./: LICENSE  README.md  pyproject.toml
jaxisp/: __init__.py  array_types.py  config.py  helpers.py  pipeline.py
jaxisp/configs/: nikon_d3200.yaml  pipeline.yaml
jaxisp/configs/parameters/: nikon_d3200.yaml
jaxisp/nodes/: __init__.py  aaf.py  awb.py  bcc.py  blc.py  bnf.py  ccm.py  cnf.py  common.py  dpc.py  gac.py  hsc.py  nlm.py  scl.py
tests/: unification.py
